--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "scripts": {
     "build": "react-router build",
     "dev": "cross-env NODE_ENV=development node server.js",
-    "start": "node server.js",
+    "start": "dotenv -e .env node server.js",
     "typecheck": "react-router typegen && tsc -b"
   },
   "dependencies": {
     "@react-router/express": "^7.9.2",
+    "@react-router/fs-routes": "^7.9.6",
     "@react-router/node": "^7.9.2",
+    "@types/pg": "^8.15.6",
     "compression": "^1.8.1",
+    "dn-react-router-toolkit": "0.1.2",
+    "dotenv": "^17.2.3",
+    "dotenv-cli": "^11.0.0",
+    "drizzle-orm": "^0.44.7",
     "express": "^5.1.0",
     "isbot": "^5.1.31",
     "morgan": "^1.10.1",
+    "pg": "^8.16.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.2"
@@ -27,9 +34,10 @@
     "@types/express-serve-static-core": "^5.0.7",
     "@types/morgan": "^1.9.10",
     "@types/node": "^22",
-    "@types/react": "^19.1.13",
+    "@types/react": "^19.2.7",
     "@types/react-dom": "^19.1.9",
     "cross-env": "^10.0.0",
+    "drizzle-kit": "^0.31.7",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
