--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,6 +32,16 @@ jobs:
         run: |
           echo "${{ secrets.ENV_FILE }}" > .env
 
+      - name: Export variables from .env
+        run: |
+          set -o allexport
+          . .env
+          set +o allexport
+
+          SITE_DOMAIN="$(echo "$SITE_ORIGIN" | sed -E 's#^https?://([^/:]+).*#\1#')"
+
+          echo "SITE_DOMAIN=$SITE_DOMAIN" >> $GITHUB_ENV
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -88,11 +98,14 @@ jobs:
             HEALTH_PATH="${{ env.HEALTH_PATH }}"
             TIMEOUT=60
             AWS_REGION="${{ env.AWS_REGION }}"
-
+            SITE_DOMAIN="${{ env.SITE_DOMAIN }}"
             UPSTREAM_NAME="${APP_NAME}_upstream"
+            SITE_CONF="/etc/nginx/sites-enabled/${APP_NAME}.conf"
             ACTIVE_CONF="/etc/nginx/includes/${UPSTREAM_NAME}.conf"
 
             echo "Deploying $IMAGE_URI"
+
+            sudo mkdir -p /etc/nginx/includes
 
             cat <<INC | sudo tee /etc/nginx/includes/bluegreen_upstream.${BLUE_PORT}.conf
             upstream ${UPSTREAM_NAME} { server 127.0.0.1:${BLUE_PORT}; }
@@ -113,6 +126,57 @@ jobs:
             fi
 
             echo "Current port: $CURRENT_PORT, Idle port: $IDLE_PORT"
+
+            cat << INC | sudo tee "$SITE_CONF"
+            include ${ACTIVE_CONF};
+
+            server {
+              server_name ${SITE_DOMAIN};
+
+              location / {
+                  proxy_pass http://${UPSTREAM_NAME};
+                  proxy_set_header Host \$host;
+                  proxy_set_header X-Real-IP \$remote_addr;
+                  proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+                  proxy_set_header X-Forwarded-Proto \$scheme;
+              }
+
+              listen [::]:443 ssl ipv6only=on;
+              listen 443 ssl;
+              ssl_certificate /etc/letsencrypt/live/${SITE_DOMAIN}/fullchain.pem;
+              ssl_certificate_key /etc/letsencrypt/live/${SITE_DOMAIN}/privkey.pem;
+              include /etc/letsencrypt/options-ssl-nginx.conf; 
+              ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+            }
+
+            server {
+              if (\$host = ${SITE_DOMAIN}) {
+                return 301 https://\$host\$request_uri;
+              }
+
+              server_name ${SITE_DOMAIN};
+              listen 80;
+              listen [::]:80;
+              return 404;
+            }
+            INC
+
+            CERT_PATH="/etc/letsencrypt/live/${SITE_DOMAIN}/fullchain.pem"
+
+            if [ ! -f "$CERT_PATH" ]; then
+              sudo rm -f "$ACTIVE_CONF"
+              sudo ln -s "$NEW_INCLUDE" "$ACTIVE_CONF"
+
+              echo "Obtaining SSL certificate for ${SITE_DOMAIN}"
+
+              sudo certbot --nginx --quiet --nginx -d "$SITE_DOMAIN" --non-interactive --agree-tos -m "${CERTBOT_EMAIL:-gabinandobin@gmail.com}" || true
+            else
+              echo "SSL certificate for ${SITE_DOMAIN} already exists"
+            fi
+
+            aws configure set region "$AWS_REGION"
+            aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
+            aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
 
             aws ecr get-login-password --region "$AWS_REGION" \
               | sudo docker login --username AWS --password-stdin "$(echo "$IMAGE_URI" | awk -F/ '{print $1}')"
