--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/pg": "^8.15.6",
     "bcryptjs": "^3.0.3",
     "compression": "^1.8.1",
-    "dn-react-router-toolkit": "0.1.2",
+    "dn-react-router-toolkit": "0.1.11",
     "dotenv": "^17.2.3",
     "dotenv-cli": "^11.0.0",
     "drizzle-orm": "^0.44.7",
@@ -43,6 +43,7 @@
     "@types/react-dom": "^19.1.9",
     "cross-env": "^10.0.0",
     "drizzle-kit": "^0.31.7",
+    "schema-dts": "^1.1.5",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
