--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "@types/pg": "^8.15.6",
         "bcryptjs": "^3.0.3",
         "compression": "^1.8.1",
-        "dn-react-router-toolkit": "../react-router-toolkit",
+        "dn-react-router-toolkit": "0.2.2",
         "dotenv": "^17.2.3",
         "dotenv-cli": "^11.0.0",
         "drizzle-orm": "^0.44.7",
