--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@react-router/node": "^7.9.2",
     "bcryptjs": "^3.0.3",
     "compression": "^1.8.1",
-    "dn-react-router-toolkit": "0.3.9",
+    "dn-react-router-toolkit": "0.4.1",
+    "dn-react-toolkit": "^0.2.14",
     "dotenv": "^17.2.3",
     "dotenv-cli": "^11.0.0",
     "drizzle-orm": "^0.44.7",
@@ -31,7 +32,6 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@types/pg": "^8.15.6",
     "@react-router/dev": "^7.9.2",
     "@tailwindcss/vite": "^4.1.13",
     "@types/compression": "^1.8.1",
@@ -39,6 +39,7 @@
     "@types/express-serve-static-core": "^5.0.7",
     "@types/morgan": "^1.9.10",
     "@types/node": "^22",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.1.9",
     "cross-env": "^10.0.0",
