--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -146,16 +146,15 @@ jobs:
                       sudo -u postgres psql -v ON_ERROR_STOP=1 <<SQL
                       DO \$\$
                       BEGIN
-                        IF NOT EXISTS (SELECT FROM pg_roles WHERE rolname = '$DB_USER') THEN
+                        IF NOT EXISTS (SELECT 1 FROM pg_roles WHERE rolname = '$DB_USER') THEN
                           CREATE ROLE "$DB_USER" LOGIN PASSWORD '$DB_PASSWORD';
-                        END IF;
-
-                        IF NOT EXISTS (SELECT FROM pg_database WHERE datname = '$DB_USER') THEN
-                          CREATE DATABASE "$DB_USER" OWNER "$DB_USER";
                         END IF;
                       END
                       \$\$;
                       SQL
+
+                      sudo -u postgres psql -tAc "SELECT 1 FROM pg_database WHERE datname='${DB_USER}'" | grep -q 1 \
+                        || sudo -u postgres createdb -O "$DB_USER" "$DB_USER"
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
 
